--- a/code/rmarkdown/article.Rmd
+++ b/code/rmarkdown/article.Rmd
@@ -100,7 +100,7 @@ ggmap(fraserIsland.sat.MAP) +
 Open $n$-mixture models were used to estimate the population size [@r1]. These models estimate the probability of detecting a spider in a given transect independent of the total number of spiders in the transect. Models were fit using the _R2jags_ _R_ package [@r2] (`r jags.params.LST[[MODE]]$iterations` total iterations; `r jags.params.LST[[MODE]]$burnin` burnin iterations; thinned by `r jags.params.LST[[MODE]]$thin` iterations; `r jags.params.LST[[MODE]]$chains`). Model convergence was assessed using $\hat{R}$ values. All statistical analyses were conducted in _R_ [version 3.3.0; @r3]. 
 
 # Results
-The total number of holes found in all visits was `r nrow(hole.DF)`. An average of `r round(mean(visit.DF$observed),2)` $\pm$ `r round(sd(visit.DF$observed),2)` SD pider holes were found in each visit to a given transect. Typically, transects were surveyed for `r round(mean(visit.DF$search_time,na.rm=TRUE),2)` minutes $\pm$ `r round(sd(visit.DF$search_time,na.rm=TRUE),2)` SD. Based on the open $n$-mixture models, the probability of detecting a spider hole in a given transect was estimated to be `r round(jags.fit$BUGSoutput$summary['p','mean'],2)` $\pm$ `r round(jags.fit$BUGSoutput$summary['p','sd'],2)` SD. The total population size along the track was estimated to be `r round(jags.fit$BUGSoutput$summary['total.number','mean'],2)` $\pm$ `r round(jags.fit$BUGSoutput$summary['total.number','sd'],2)` SD.
+The total number of holes found in all visits was `r nrow(hole.DF)`. An average of `r ceiling(mean(visit.DF$observed))` $\pm$ `r round(sd(visit.DF$observed),2)` SD spider holes were found in each visit to a given transect. Typically, transects were surveyed for `r round(mean(visit.DF$search_time,na.rm=TRUE),2)` minutes $\pm$ `r round(sd(visit.DF$search_time,na.rm=TRUE),2)` SD. Based on the open $n$-mixture models, the probability of detecting a spider hole in a given transect was estimated to be `r round(jags.fit$BUGSoutput$summary['p','mean'],2)` $\pm$ `r round(jags.fit$BUGSoutput$summary['p','sd'],2)` SD. The total population size along the track was estimated to be `r round(jags.fit$BUGSoutput$summary['total.number','mean'],2)` $\pm$ `r round(jags.fit$BUGSoutput$summary['total.number','sd'],2)` SD.
 
 The size of the spider holes were bimodally distributed (Figure 2). The spider holes tended to range between 0--10 mm and 20--35 mm. These results suggest that most of the spiders surveyed were either juveniles or adults.
 
